<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moove</string>
    <string name="_2016_nazar_suhovich">2018 © Nazar Suhovich</string>
    <string name="search">Search</string>
    <string name="action">Action</string>
    <string name="make_call">Make call</string>
    <string name="send_sms">Send SMS</string>
    <string name="phone_number">Phone number</string>
    <string name="select_file">Select file</string>
    <string name="address">Address…</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="reminder">Reminder</string>
    <string name="close">Close</string>
    <string name="place_title">Title of place</string>
    <string name="no_places">No places</string>
    <string name="radius">Radius</string>
    <string name="i_m_use_transport">I\'m using transport</string>
    <string name="ok">OK</string>
    <string name="do_you_want_ro_rate_this_application">Do you want to rate this application?</string>
    <string name="never">Never</string>
    <string name="later">Later</string>
    <string name="rate">Rate</string>
    <string name="delay_tracking_start">Delay start of tracking</string>
    <string name="current_location">Current location</string>
    <string name="select_point_on_map">Select place on map</string>
    <string name="_24_hour_time_format">24 hour time format</string>
    <string name="android_wear_notification">Android Wear notification</string>
    <string name="map_type">Map type</string>
    <string name="places">Places</string>
    <string name="marker_style">Style of marker</string>
    <string name="tracking_preferences">Tracking settings</string>
    <string name="distance_notification">Notification about distance</string>
    <string name="look_amp_feel">Appearance</string>
    <string name="background_image">Background image</string>
    <string name="image_blur">Blurriness</string>
    <string name="sound_amp_vibration">Sound &amp; vibration</string>
    <string name="volume">Loudness</string>
    <string name="vibrate">Vibrate</string>
    <string name="infinite_vibration">Infinite vibration</string>
    <string name="sound_in_silent_mode">Sound in silent mode</string>
    <string name="infinite_sound_loop">Infinite melody (repeat)</string>
    <string name="voice_notification_tts">Voice notification (TTS)</string>
    <string name="voice_language">Language of voice</string>
    <string name="notification">Notification</string>
    <string name="awake_screen">Waking up screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="send_sms_automatically">Send SMS automatically</string>
    <string name="led_notification">LED notification</string>
    <string name="led_color">LED color</string>
    <string name="permissions">Permissions</string>
    <string name="allow_permission">Add permission</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="changes">Changes</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="send_feedback">Send feedback</string>
    <string name="tell_friends">Tell friends</string>
    <string name="remind_me">Remind me…</string>
    <string name="for_lower_battery_using_set_bigger_values">To use less battery power, use the higher values</string>
    <string name="melody">Melody</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="general">General</string>
    <string name="location">Location</string>
    <string name="other">Other</string>
    <string name="version">Version</string>
    <string name="light_blue">Light blue</string>
    <string name="light_green">Light green</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="turn_screen_off_to_see_led_light">Turn off the screen to see LED!</string>
    <string name="select_one_of_item">Select one of items!</string>
    <string name="empty_field">Empty field!</string>
    <string name="place_out">Place out</string>
    <string name="deleted">Removed</string>
    <string name="selected_radius_meters">Selected radius %s meters</string>
    <string name="no_place_selected">The place is not selected!</string>
    <string name="selected_melody">Selected melody</string>
    <string name="selected_led_color">Selected LED color - %s</string>
    <string name="message">Message</string>
    <string name="error_sending_message">Error sending message!</string>
    <string name="edit">Edit</string>
    <string name="no_files">No files</string>
    <string name="this_format_is_not_supported">This is not melody!</string>
    <string name="contacts">Contacts</string>
    <string name="course_location">Approximate location</string>
    <string name="fine_location">Exact location</string>
    <string name="call_phone">Call phone</string>
    <string name="get_accounts">Get accounts</string>
    <string name="read_phone_state">Read phone state</string>
    <string name="read_contacts">Read contacts</string>
    <string name="m">m</string>
    <string name="s">s</string>
    <string name="default_string">Default</string>
    <string name="select_image">Select image</string>
    <string name="none">None</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="polish">Polish</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="delivered">Delivered</string>
    <string name="not_delivered">Not delivered</string>
    <string name="gps_is_not_enabled">GPS is not enabled!</string>
    <string name="loading_contacts">Loading contacts…</string>
    <string name="say_something">Say something</string>
    <string name="no_recognizer_found">Speech recognition system not found!</string>
    <string name="no_reminders">No reminders</string>
    <string name="read_external_storage">Read memory card</string>
    <string name="write_external_storage">Write to a memory card</string>
    <string name="send_message">Send message</string>
    <string name="reminder_disabled">Reminder disabled</string>
    <string name="reminder_tracking_start_delayed">Beginning of tracking postponed</string>
    <string name="tracking_start">Start tracking</string>
    <string name="dismiss">Reject</string>
    <string name="cant_read_external_storage">Can not read a memory card!</string>
    <string name="cant_access_to_contacts">I can not get access to contacts!</string>
    <string name="cant_access_location_services">I can not get access to the location services!</string>
    <string name="purple">Purple</string>
    <string name="amber">Amber</string>
    <string name="cyan">Cyan</string>
    <string name="lime">Lime</string>
    <string name="indigo">Indigo</string>
    <string name="deep_orange">Dark orange</string>
    <string name="deep_purple">Dark purple</string>
    <string name="teal">Teal</string>
    <string name="set_volume_for_reminder">Set loudness (%s) for reminder</string>
    <string name="directions">Directions</string>
    <string name="places_list_auto_completion">Auto filling list of places</string>
    <string name="more_apps">More apps</string>
    <string name="could_not_launch_market">Could not launch Play Market</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="choose_reminder">Choose reminder</string>
    <string name="at_first_select_reminder">First select a reminder for this widget!</string>
    <string name="distance_m">%s m</string>
    <string name="no_reminder">No reminders</string>
    <string name="to_go_only_distance">Remains (only distance)</string>
    <string name="to_go">Remains</string>
    <string name="your_device_is_not_compatible_with_this_application_here_are_the_problems">Your device is not compatible with this application. Here are the problems.</string>
    <string name="fix">Fix</string>
    <string name="using_location_services_not_allowed">Using location services not allowed.</string>
    <string name="play_services_not_found_or_it_is_out_of_date">Google Play Services not found or it is out of date.</string>
    <string name="title_activity_donate">Donate</string>
    <string name="buy">Buy</string>
    <string name="got_it">GOT IT</string>
    <string name="select_style_for_marker">Select style for marker</string>
    <string name="click_when_add_place">Click to close map and save reminder</string>
    <string name="select_place_from_list">Select from list</string>
    <string name="click_to_expand_collapse_map">Click to expand/collapse map</string>
    <string name="off">Finished</string>
    <string name="make_call_automatically">Make call automatically</string>
    <string name="all_permissions_are_enabled">All permissions are enabled</string>
    <string name="type_to_search">Type to search</string>
    <string name="not_music_file">Not a melody file</string>
    <string name="up">Up</string>
    <string name="reminder_channel" translatable="false">Reminder channel</string>
    <string name="default_reminder_notifications" translatable="false">Default reminder notifications</string>
    <string name="info_channel" translatable="false">Info channel</string>
    <string name="channel_for_other_info_notifications" translatable="false">Channel for other informative notifications</string>
    <string name="location_tracking_service_running">Location tracking service running</string>
    <string name="app_not_found">Application not found</string>
    <string name="cancel">Cancel</string>
    <string name="grant">grant</string>
    <string name="for_correct_work_of_application">For correct work allow notification permission</string>
    <string name="recent_places">recent places</string>
    <string name="aubergine">Aubergine</string>
    <string name="dark">Dark</string>
    <string name="night">Night</string>
    <string name="silver">Silver</string>
    <string name="retro">Retro</string>
    <string name="day">Day</string>
    <string name="new_place">New place</string>
    <string name="entering_place">Entering place</string>
    <string name="leaving_place">Leaving place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portuguese">Portuguese</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="new_reminder">New reminder</string>
</resources>