<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.backdoor.moove.MainActivity">

    <item
        android:id="@+id/action_places"
        android:orderInCategory="100"
        android:title="@string/places"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_directions"
        android:orderInCategory="100"
        android:title="@string/directions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/more_apps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donate"
        android:orderInCategory="100"
        android:title="@string/title_activity_donate"
        app:showAsAction="never" />
</menu>
