<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".modern_ui.settings.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/other" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.backdoor.moove.views.PrefsView
                    android:id="@+id/prefsAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_primary_text="@string/about"
                    app:prefs_type="none" />

                <com.backdoor.moove.views.PrefsView
                    android:id="@+id/prefsRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_primary_text="@string/rate"
                    app:prefs_type="none" />

                <com.backdoor.moove.views.PrefsView
                    android:id="@+id/prefsOss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_primary_text="@string/open_source_licenses"
                    app:prefs_type="none" />

                <com.backdoor.moove.views.PrefsView
                    android:id="@+id/prefsFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_primary_text="@string/send_feedback"
                    app:prefs_type="none" />

                <com.backdoor.moove.views.PrefsView
                    android:id="@+id/prefsShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_primary_text="@string/tell_friends"
                    app:prefs_type="none" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>