<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/settings_margin"
        android:layout_marginRight="@dimen/settings_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/themePrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/look_amp_feel"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/settings_text_size_primary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/selectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/background_image"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/settings_text_size_primary" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/blurPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="false"
                    app:prefs_divider_top="true"
                    app:prefs_primary_text="@string/image_blur"
                    app:prefs_type="check" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/soundCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/themePrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/sound_amp_vibration"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/settings_text_size_primary"
                    android:textStyle="bold" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/vibrationOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="true"
                    app:prefs_primary_text="@string/vibrate"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/infiniteVibrateOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/infinite_vibration"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/soundOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/sound_in_silent_mode"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/infiniteSoundOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/infinite_sound_loop"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/chooseSoundPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/melody"
                    app:prefs_type="none" />

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/volume"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/settings_text_size_primary" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/ttsPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="true"
                    app:prefs_primary_text="@string/voice_notification_tts" />

                <TextView
                    android:id="@+id/locale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/voice_language"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/settings_text_size_primary" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/systemCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/themePrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/notification"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/settings_text_size_primary"
                    android:textStyle="bold" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/wakeScreenOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="true"
                    app:prefs_primary_text="@string/awake_screen"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/unlockScreenPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/unlock_screen"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/silentSMSOptionPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/send_sms_automatically"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/ledPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="true"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/led_notification"
                    app:prefs_type="check" />

                <com.backdoor.moove.core.views.PrefsView
                    android:id="@+id/chooseLedColorPrefs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefs_divider_bottom="false"
                    app:prefs_divider_top="false"
                    app:prefs_primary_text="@string/led_color"
                    app:prefs_type="none" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
